[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://AutotileTerrain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Help/TutorialDone.png" type="Texture" id=3]
[ext_resource path="res://Help/Slap.png" type="Texture" id=4]
[ext_resource path="res://Help/Movement.png" type="Texture" id=5]
[ext_resource path="res://Help/Jump.png" type="Texture" id=6]
[ext_resource path="res://Starting Cutscene.gd" type="Script" id=7]
[ext_resource path="res://Help/Dash.png" type="Texture" id=8]
[ext_resource path="res://Help/Others.png" type="Texture" id=9]
[ext_resource path="res://Help/DashJK.png" type="Texture" id=10]
[ext_resource path="res://GenieNV.tscn" type="PackedScene" id=11]
[ext_resource path="res://AzwadTexts.tscn" type="PackedScene" id=12]
[ext_resource path="res://Food.tscn" type="PackedScene" id=13]
[ext_resource path="res://coin.tscn" type="PackedScene" id=14]
[ext_resource path="res://MI.tscn" type="PackedScene" id=15]
[ext_resource path="res://gravewriting.png" type="Texture" id=16]
[ext_resource path="res://Gravestone.png" type="Texture" id=17]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=18]
[ext_resource path="res://ChangeStage.tscn" type="PackedScene" id=19]
[ext_resource path="res://Fonts/Comfortaa.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://HUD.gd" type="Script" id=21]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=22]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.121569 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 20 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="ChangeStage" parent="." instance=ExtResource( 19 )]
position = Vector2( 2230.6, 308.748 )
scale = Vector2( 2, 3 )
target_stage = "res://.import/World.tscn"

[node name="AutotileTerrain" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 393201, 0, 0, 393202, 0, 1, 393203, 0, 1, 393204, 0, 1, 393205, 0, 1, 393206, 0, 1, 393207, 0, 1, 393208, 0, 1, 393209, 0, 1, 393210, 0, 2, 327768, 0, 0, 327769, 0, 1, 327770, 0, 1, 327771, 0, 1, 327772, 0, 1, 327773, 0, 1, 327774, 0, 1, 327775, 0, 1, 327776, 0, 1, 327777, 0, 1, 327778, 0, 1, 327779, 0, 1, 327780, 0, 2, 458737, 0, 65536, 458738, 0, 65537, 458739, 0, 65537, 458740, 0, 65537, 458741, 0, 65537, 458742, 0, 65537, 458743, 0, 65537, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65538, 393304, 0, 65536, 393305, 0, 65537, 393306, 0, 65537, 393307, 0, 65537, 393308, 0, 65537, 393309, 0, 65537, 393310, 0, 65537, 393311, 0, 65537, 393312, 0, 65537, 393313, 0, 65537, 393314, 0, 65537, 393315, 0, 65537, 393316, 0, 65538, 524273, 0, 65536, 524274, 0, 65537, 524275, 0, 65537, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65538, 458840, 0, 65536, 458841, 0, 65537, 458842, 0, 65537, 458843, 0, 65537, 458844, 0, 65537, 458845, 0, 65537, 458846, 0, 65537, 458847, 0, 65537, 458848, 0, 65537, 458849, 0, 65537, 458850, 0, 65537, 458851, 0, 65537, 458852, 0, 65538, 589809, 0, 65536, 589810, 0, 65537, 589811, 0, 65537, 589812, 0, 65537, 589813, 0, 65537, 589814, 0, 65537, 589815, 0, 65537, 589816, 0, 65537, 589817, 0, 65537, 589818, 0, 65538, 524376, 0, 65536, 524377, 0, 65537, 524378, 0, 65537, 524379, 0, 65537, 524380, 0, 65537, 524381, 0, 65537, 524382, 0, 65537, 524383, 0, 65537, 524384, 0, 65537, 524385, 0, 65537, 524386, 0, 65537, 524387, 0, 65537, 524388, 0, 65538, 655345, 0, 65536, 655346, 0, 65537, 655347, 0, 65537, 655348, 0, 65537, 655349, 0, 65537, 655350, 0, 65537, 655351, 0, 65537, 655352, 0, 65537, 655353, 0, 65537, 655354, 0, 65538, 589912, 0, 65536, 589913, 0, 65537, 589914, 0, 65537, 589915, 0, 65537, 589916, 0, 65537, 589917, 0, 65537, 589918, 0, 65537, 589919, 0, 65537, 589920, 0, 65537, 589921, 0, 65537, 589922, 0, 65537, 589923, 0, 65537, 589924, 0, 65538, 720881, 0, 65536, 720882, 0, 65537, 720883, 0, 65537, 720884, 0, 65537, 720885, 0, 65537, 720886, 0, 65537, 720887, 0, 65537, 720888, 0, 65537, 720889, 0, 65537, 720890, 0, 65538, 655382, 0, 196608, 655383, 0, 196610, 655448, 0, 65536, 655449, 0, 65537, 655450, 0, 65537, 655451, 0, 65537, 655452, 0, 65537, 655453, 0, 65537, 655454, 0, 65537, 655455, 0, 65537, 655456, 0, 65537, 655457, 0, 65537, 655458, 0, 65537, 655459, 0, 65537, 655460, 0, 65538, 786417, 0, 65536, 786418, 0, 65537, 786419, 0, 65537, 786420, 0, 65537, 786421, 0, 65537, 786422, 0, 65537, 786423, 0, 65537, 786424, 0, 65537, 786425, 0, 65537, 786426, 0, 65538, 720915, 0, 196608, 720916, 0, 196610, 720984, 0, 131072, 720985, 0, 131073, 720986, 0, 131073, 720987, 0, 131073, 720988, 0, 131073, 720989, 0, 131073, 720990, 0, 131073, 720991, 0, 131073, 720992, 0, 131073, 720993, 0, 131073, 720994, 0, 131073, 720995, 0, 131073, 720996, 0, 131074, 851953, 0, 65536, 851954, 0, 65537, 851955, 0, 65537, 851956, 0, 65537, 851957, 0, 65537, 851958, 0, 65537, 851959, 0, 65537, 851960, 0, 65537, 851961, 0, 65537, 851962, 0, 65538, 786448, 0, 196608, 786449, 0, 196610, 917489, 0, 65536, 917490, 0, 65537, 917491, 0, 65537, 917492, 0, 65537, 917493, 0, 65537, 917494, 0, 65537, 917495, 0, 65537, 917496, 0, 65537, 917497, 0, 65537, 917498, 0, 65538, 983025, 0, 65536, 983026, 0, 65537, 983027, 0, 65537, 983028, 0, 65537, 983029, 0, 65537, 983030, 0, 65537, 983031, 0, 65537, 983032, 0, 65537, 983033, 0, 65537, 983034, 0, 262145, 983035, 0, 1, 983036, 0, 1, 983037, 0, 1, 983038, 0, 1, 983039, 0, 1, 917504, 0, 1, 917505, 0, 1, 917506, 0, 1, 917507, 0, 1, 917508, 0, 1, 917509, 0, 1, 917510, 0, 1, 917511, 0, 1, 917512, 0, 1, 917513, 0, 1, 917514, 0, 1, 917515, 0, 1, 917516, 0, 1, 917517, 0, 1, 917518, 0, 2, 917528, 0, 0, 917529, 0, 1, 917530, 0, 1, 917531, 0, 1, 917532, 0, 1, 917533, 0, 1, 917534, 0, 1, 917535, 0, 1, 917536, 0, 1, 917537, 0, 1, 917538, 0, 1, 917539, 0, 1, 917540, 0, 1, 917541, 0, 1, 917542, 0, 1, 917543, 0, 1, 917544, 0, 1, 917545, 0, 1, 917546, 0, 1, 917547, 0, 1, 917548, 0, 1, 917549, 0, 1, 917550, 0, 1, 917551, 0, 1, 917552, 0, 1, 917553, 0, 1, 917554, 0, 1, 917555, 0, 1, 917556, 0, 1, 917557, 0, 1, 917558, 0, 1, 917559, 0, 1, 917560, 0, 1, 917561, 0, 1, 917562, 0, 1, 917563, 0, 1, 917564, 0, 1, 917565, 0, 1, 917566, 0, 1, 917567, 0, 1, 917568, 0, 1, 917569, 0, 1, 917570, 0, 1, 917571, 0, 1, 917572, 0, 1, 917573, 0, 1, 917574, 0, 1, 917575, 0, 1, 917576, 0, 1, 917577, 0, 1, 917578, 0, 1, 917579, 0, 1, 917580, 0, 1, 917581, 0, 1, 917582, 0, 1, 917583, 0, 1, 917584, 0, 1, 917585, 0, 1, 917586, 0, 1, 917587, 0, 1, 917588, 0, 1, 917589, 0, 1, 917590, 0, 1, 917591, 0, 1, 917592, 0, 1, 917593, 0, 1, 917594, 0, 1, 917595, 0, 1, 917596, 0, 1, 917597, 0, 1, 917598, 0, 1, 917599, 0, 1, 917600, 0, 1, 917601, 0, 1, 917602, 0, 1, 917603, 0, 1, 917604, 0, 2, 1048561, 0, 65536, 1048562, 0, 65537, 1048563, 0, 65537, 1048564, 0, 65537, 1048565, 0, 65537, 1048566, 0, 65537, 1048567, 0, 65537, 1048568, 0, 65537, 1048569, 0, 65537, 1048570, 0, 65537, 1048571, 0, 65537, 1048572, 0, 65537, 1048573, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65538, 983062, 0, 0, 983063, 0, 1, 983064, 0, 262144, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65537, 983076, 0, 65537, 983077, 0, 65537, 983078, 0, 65537, 983079, 0, 65537, 983080, 0, 65537, 983081, 0, 65537, 983082, 0, 65537, 983083, 0, 65537, 983084, 0, 65537, 983085, 0, 65537, 983086, 0, 65537, 983087, 0, 65537, 983088, 0, 65537, 983089, 0, 65537, 983090, 0, 65537, 983091, 0, 65537, 983092, 0, 65537, 983093, 0, 65537, 983094, 0, 65537, 983095, 0, 65537, 983096, 0, 65537, 983097, 0, 65537, 983098, 0, 65537, 983099, 0, 65537, 983100, 0, 65537, 983101, 0, 65537, 983102, 0, 65537, 983103, 0, 65537, 983104, 0, 65537, 983105, 0, 65537, 983106, 0, 65537, 983107, 0, 65537, 983108, 0, 65537, 983109, 0, 65537, 983110, 0, 65537, 983111, 0, 65537, 983112, 0, 65537, 983113, 0, 65537, 983114, 0, 65537, 983115, 0, 65537, 983116, 0, 65537, 983117, 0, 65537, 983118, 0, 65537, 983119, 0, 65537, 983120, 0, 65537, 983121, 0, 65537, 983122, 0, 65537, 983123, 0, 65537, 983124, 0, 65537, 983125, 0, 65537, 983126, 0, 65537, 983127, 0, 65537, 983128, 0, 65537, 983129, 0, 65537, 983130, 0, 65537, 983131, 0, 65537, 983132, 0, 65537, 983133, 0, 65537, 983134, 0, 65537, 983135, 0, 65537, 983136, 0, 65537, 983137, 0, 65537, 983138, 0, 65537, 983139, 0, 65537, 983140, 0, 65538, 1114097, 0, 65536, 1114098, 0, 65537, 1114099, 0, 65537, 1114100, 0, 65537, 1114101, 0, 65537, 1114102, 0, 65537, 1114103, 0, 65537, 1114104, 0, 65537, 1114105, 0, 65537, 1114106, 0, 65537, 1114107, 0, 65537, 1114108, 0, 65537, 1114109, 0, 65537, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 262145, 1048591, 0, 1, 1048592, 0, 1, 1048593, 0, 1, 1048594, 0, 1, 1048595, 0, 1, 1048596, 0, 1, 1048597, 0, 1, 1048598, 0, 262144, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 65537, 1048617, 0, 65537, 1048618, 0, 65537, 1048619, 0, 65537, 1048620, 0, 65537, 1048621, 0, 65537, 1048622, 0, 65537, 1048623, 0, 65537, 1048624, 0, 65537, 1048625, 0, 65537, 1048626, 0, 65537, 1048627, 0, 65537, 1048628, 0, 65537, 1048629, 0, 65537, 1048630, 0, 65537, 1048631, 0, 65537, 1048632, 0, 65537, 1048633, 0, 65537, 1048634, 0, 65537, 1048635, 0, 65537, 1048636, 0, 65537, 1048637, 0, 65537, 1048638, 0, 65537, 1048639, 0, 65537, 1048640, 0, 65537, 1048641, 0, 65537, 1048642, 0, 65537, 1048643, 0, 65537, 1048644, 0, 65537, 1048645, 0, 65537, 1048646, 0, 65537, 1048647, 0, 65537, 1048648, 0, 65537, 1048649, 0, 65537, 1048650, 0, 65537, 1048651, 0, 65537, 1048652, 0, 65537, 1048653, 0, 65537, 1048654, 0, 65537, 1048655, 0, 65537, 1048656, 0, 65537, 1048657, 0, 65537, 1048658, 0, 65537, 1048659, 0, 65537, 1048660, 0, 65537, 1048661, 0, 65537, 1048662, 0, 65537, 1048663, 0, 65537, 1048664, 0, 65537, 1048665, 0, 65537, 1048666, 0, 65537, 1048667, 0, 65537, 1048668, 0, 65537, 1048669, 0, 65537, 1048670, 0, 65537, 1048671, 0, 65537, 1048672, 0, 65537, 1048673, 0, 65537, 1048674, 0, 65537, 1048675, 0, 65537, 1048676, 0, 65538, 1179633, 0, 65536, 1179634, 0, 65537, 1179635, 0, 65537, 1179636, 0, 65537, 1179637, 0, 65537, 1179638, 0, 65537, 1179639, 0, 65537, 1179640, 0, 65537, 1179641, 0, 65537, 1179642, 0, 65537, 1179643, 0, 65537, 1179644, 0, 65537, 1179645, 0, 65537, 1179646, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65537, 1114153, 0, 65537, 1114154, 0, 65537, 1114155, 0, 65537, 1114156, 0, 65537, 1114157, 0, 65537, 1114158, 0, 65537, 1114159, 0, 65537, 1114160, 0, 65537, 1114161, 0, 65537, 1114162, 0, 65537, 1114163, 0, 65537, 1114164, 0, 65537, 1114165, 0, 65537, 1114166, 0, 65537, 1114167, 0, 65537, 1114168, 0, 65537, 1114169, 0, 65537, 1114170, 0, 65537, 1114171, 0, 65537, 1114172, 0, 65537, 1114173, 0, 65537, 1114174, 0, 65537, 1114175, 0, 65537, 1114176, 0, 65537, 1114177, 0, 65537, 1114178, 0, 65537, 1114179, 0, 65537, 1114180, 0, 65537, 1114181, 0, 65537, 1114182, 0, 65537, 1114183, 0, 65537, 1114184, 0, 65537, 1114185, 0, 65537, 1114186, 0, 65537, 1114187, 0, 65537, 1114188, 0, 65537, 1114189, 0, 65537, 1114190, 0, 65537, 1114191, 0, 65537, 1114192, 0, 65537, 1114193, 0, 65537, 1114194, 0, 65537, 1114195, 0, 65537, 1114196, 0, 65537, 1114197, 0, 65537, 1114198, 0, 65537, 1114199, 0, 65537, 1114200, 0, 65537, 1114201, 0, 65537, 1114202, 0, 65537, 1114203, 0, 65537, 1114204, 0, 65537, 1114205, 0, 65537, 1114206, 0, 65537, 1114207, 0, 65537, 1114208, 0, 65537, 1114209, 0, 65537, 1114210, 0, 65537, 1114211, 0, 65537, 1114212, 0, 65538, 1245169, 0, 65536, 1245170, 0, 65537, 1245171, 0, 65537, 1245172, 0, 65537, 1245173, 0, 65537, 1245174, 0, 65537, 1245175, 0, 65537, 1245176, 0, 65537, 1245177, 0, 65537, 1245178, 0, 65537, 1245179, 0, 65537, 1245180, 0, 65537, 1245181, 0, 65537, 1245182, 0, 65537, 1245183, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 65537, 1179674, 0, 65537, 1179675, 0, 65537, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65537, 1179685, 0, 65537, 1179686, 0, 65537, 1179687, 0, 65537, 1179688, 0, 65537, 1179689, 0, 65537, 1179690, 0, 65537, 1179691, 0, 65537, 1179692, 0, 65537, 1179693, 0, 65537, 1179694, 0, 65537, 1179695, 0, 65537, 1179696, 0, 65537, 1179697, 0, 65537, 1179698, 0, 65537, 1179699, 0, 65537, 1179700, 0, 65537, 1179701, 0, 65537, 1179702, 0, 65537, 1179703, 0, 65537, 1179704, 0, 65537, 1179705, 0, 65537, 1179706, 0, 65537, 1179707, 0, 65537, 1179708, 0, 65537, 1179709, 0, 65537, 1179710, 0, 65537, 1179711, 0, 65537, 1179712, 0, 65537, 1179713, 0, 65537, 1179714, 0, 65537, 1179715, 0, 65537, 1179716, 0, 65537, 1179717, 0, 65537, 1179718, 0, 65537, 1179719, 0, 65537, 1179720, 0, 65537, 1179721, 0, 65537, 1179722, 0, 65537, 1179723, 0, 65537, 1179724, 0, 65537, 1179725, 0, 65537, 1179726, 0, 65537, 1179727, 0, 65537, 1179728, 0, 65537, 1179729, 0, 65537, 1179730, 0, 65537, 1179731, 0, 65537, 1179732, 0, 65537, 1179733, 0, 65537, 1179734, 0, 65537, 1179735, 0, 65537, 1179736, 0, 65537, 1179737, 0, 65537, 1179738, 0, 65537, 1179739, 0, 65537, 1179740, 0, 65537, 1179741, 0, 65537, 1179742, 0, 65537, 1179743, 0, 65537, 1179744, 0, 65537, 1179745, 0, 65537, 1179746, 0, 65537, 1179747, 0, 65537, 1179748, 0, 65538, 1310705, 0, 131072, 1310706, 0, 131073, 1310707, 0, 131073, 1310708, 0, 131073, 1310709, 0, 131073, 1310710, 0, 131073, 1310711, 0, 131073, 1310712, 0, 131073, 1310713, 0, 131073, 1310714, 0, 131073, 1310715, 0, 131073, 1310716, 0, 131073, 1310717, 0, 131073, 1310718, 0, 131073, 1310719, 0, 131073, 1245184, 0, 131073, 1245185, 0, 131073, 1245186, 0, 131073, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131073, 1245193, 0, 131073, 1245194, 0, 131073, 1245195, 0, 131073, 1245196, 0, 131073, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131073, 1245205, 0, 131073, 1245206, 0, 131073, 1245207, 0, 131073, 1245208, 0, 131073, 1245209, 0, 131073, 1245210, 0, 131073, 1245211, 0, 131073, 1245212, 0, 131073, 1245213, 0, 131073, 1245214, 0, 131073, 1245215, 0, 131073, 1245216, 0, 131073, 1245217, 0, 131073, 1245218, 0, 131073, 1245219, 0, 131073, 1245220, 0, 131073, 1245221, 0, 131073, 1245222, 0, 131073, 1245223, 0, 131073, 1245224, 0, 131073, 1245225, 0, 131073, 1245226, 0, 131073, 1245227, 0, 131073, 1245228, 0, 131073, 1245229, 0, 131073, 1245230, 0, 131073, 1245231, 0, 131073, 1245232, 0, 131073, 1245233, 0, 131073, 1245234, 0, 131073, 1245235, 0, 131073, 1245236, 0, 131073, 1245237, 0, 131073, 1245238, 0, 131073, 1245239, 0, 131073, 1245240, 0, 131073, 1245241, 0, 131073, 1245242, 0, 131073, 1245243, 0, 131073, 1245244, 0, 131073, 1245245, 0, 131073, 1245246, 0, 131073, 1245247, 0, 131073, 1245248, 0, 131073, 1245249, 0, 131073, 1245250, 0, 131073, 1245251, 0, 131073, 1245252, 0, 131073, 1245253, 0, 131073, 1245254, 0, 131073, 1245255, 0, 131073, 1245256, 0, 131073, 1245257, 0, 131073, 1245258, 0, 131073, 1245259, 0, 131073, 1245260, 0, 131073, 1245261, 0, 131073, 1245262, 0, 131073, 1245263, 0, 131073, 1245264, 0, 131073, 1245265, 0, 131073, 1245266, 0, 131073, 1245267, 0, 131073, 1245268, 0, 131073, 1245269, 0, 131073, 1245270, 0, 131073, 1245271, 0, 131073, 1245272, 0, 131073, 1245273, 0, 131073, 1245274, 0, 131073, 1245275, 0, 131073, 1245276, 0, 131073, 1245277, 0, 131073, 1245278, 0, 131073, 1245279, 0, 131073, 1245280, 0, 131073, 1245281, 0, 131073, 1245282, 0, 131073, 1245283, 0, 131073, 1245284, 0, 131074 )

[node name="TutorialDone" type="Sprite" parent="."]
position = Vector2( 1900, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 3 )

[node name="Slap" type="Sprite" parent="."]
position = Vector2( 1750, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 4 )

[node name="Movement" type="Sprite" parent="."]
position = Vector2( 30, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 5 )

[node name="Jump" type="Sprite" parent="."]
position = Vector2( 250, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 6 )

[node name="Dash" type="Sprite" parent="."]
position = Vector2( 650, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 8 )

[node name="DashJK" type="Sprite" parent="."]
position = Vector2( 900, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 10 )

[node name="Others" type="Sprite" parent="."]
position = Vector2( 1100, 275 )
scale = Vector2( 0.24, 0.2 )
texture = ExtResource( 9 )

[node name="Genie" parent="." instance=ExtResource( 11 )]
position = Vector2( 80, 260 )
collision_layer = 64
collision_mask = 0

[node name="PlayerNV" parent="." instance=ExtResource( 1 )]
position = Vector2( -89.2244, 299.657 )

[node name="Gravestone" type="Sprite" parent="."]
position = Vector2( 2000.41, 326.544 )
scale = Vector2( 2.20405, 1.83315 )
texture = ExtResource( 17 )

[node name="gravewriting" type="Sprite" parent="."]
position = Vector2( 2000.43, 325.893 )
scale = Vector2( 0.106685, 0.134731 )
texture = ExtResource( 16 )

[node name="items" type="YSort" parent="."]

[node name="Coin" parent="items" instance=ExtResource( 14 )]
position = Vector2( 1168.52, 309.591 )

[node name="Coin2" parent="items" instance=ExtResource( 14 )]
position = Vector2( 1385.09, 309.257 )

[node name="Coin4" parent="items" instance=ExtResource( 14 )]
position = Vector2( 1458.51, 308.256 )

[node name="Coin3" parent="items" instance=ExtResource( 14 )]
position = Vector2( 1239.93, 307.922 )

[node name="Food" parent="items" instance=ExtResource( 13 )]
position = Vector2( 1311.76, 308.743 )

[node name="AzwadTexts" parent="items" instance=ExtResource( 12 )]
position = Vector2( 1206.24, 277.13 )

[node name="Enemy" parent="." instance=ExtResource( 15 )]
position = Vector2( 2000.25, 297.302 )

[node name="Enemy2" parent="." instance=ExtResource( 18 )]
position = Vector2( 30.0206, 301.567 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 21 )

[node name="Panel" type="Panel" parent="HUD"]
visible = false
margin_left = 30.0
margin_top = 41.0
margin_right = 163.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD"]
visible = false
margin_left = 38.5576
margin_top = 49.0
margin_right = 108.558
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.658824, 0.0196078, 1 )
text = "Coins: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="HUD"]
visible = false
margin_left = 110.959
margin_top = 50.0
margin_right = 167.959
margin_bottom = 82.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.921569, 0.658824, 0.0196078, 1 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 22 )]
